--- a/composer.json
+++ b/composer.json
@@ -20,11 +20,13 @@
 		"vendor-dir": "wp-content/wp2/vendor",
 		"allow-plugins": {
 			"composer/installers": true,
-			"pestphp/pest-plugin": true
+			"pestphp/pest-plugin": true,
+			"dealerdirect/phpcodesniffer-composer-installer": false
 		}
 	},
 	"require-dev": {
 		"pestphp/pest": "^3.8",
-		"squizlabs/php_codesniffer": "^3.7"
+		"squizlabs/php_codesniffer": "^3.7",
+		"wp-coding-standards/wpcs": "^3.0"
 	}
 }
