--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,8 @@
 	"require-dev": {
 		"pestphp/pest": "^3.8",
 		"squizlabs/php_codesniffer": "^3.7",
-		"wp-coding-standards/wpcs": "^3.0"
+		"wp-coding-standards/wpcs": "^3.2",
+		"phpcsstandards/phpcsutils": "^1.0",
+		"phpcsstandards/phpcsextra": "^1.0"
 	}
 }
