--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
 		"pestphp/pest": "^3.8",
 		"squizlabs/php_codesniffer": "^3.7",
 		"wp-coding-standards/wpcs": "^3.2",
-		"phpcsstandards/phpcsextra": "^1.0"
+		"phpcsstandards/phpcsextra": "^1.0",
+		"phpcsstandards/phpcsutils": "^1.0"
 	}
 }
