--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,5 +1,3 @@
-# .github/workflows/test.yml
-
 name: Build and Test
 
 on:
@@ -40,7 +38,7 @@ jobs:
 
       # Lint PHP files
       - name: Lint PHP files
-        run: wp-content/wp2/vendor/bin/phpcs --standard=WordPress wp-content/
+        run: wp-content/wp2/vendor/bin/phpcs -q
      
         # Step 4: Run the test suite
       - name: Run tests
